# Persian-Legal-Agent

./: .gitattributes  .gitignore  questions.txt  requirements.txt  test.ipynb
3-Multi-Agent-System/: pyproject.toml
3-Multi-Agent-System/REport/: s6.aux  s6.tex
3-Multi-Agent-System/Test_402/BaseLine/Gold_402/: Gold_402.csv
3-Multi-Agent-System/Test_402/BaseLine/Qwen3.7 Max/: Qwen3.7 Max.ipynb  results_few_shot.csv  results_few_shot.xlsx
3-Multi-Agent-System/Test_402/BaseLine/deepseek v4 flash/: deepseek v4 flash.ipynb  results_few_shot.csv  results_few_shot.xlsx
3-Multi-Agent-System/Test_402/BaseLine/gemini 2.5 flash/: gemini 25 flash.ipynb  results_few_shot.csv  results_few_shot.xlsx
3-Multi-Agent-System/Test_402/BaseLine/gemini 3 flash/: gemini 3 flash.ipynb  results_few_shot.csv  results_few_shot.xlsx
3-Multi-Agent-System/data/: all models.csv
3-Multi-Agent-System/data/config/: config.py  qavanin_karbordi.txt
3-Multi-Agent-System/data/eval/: gemini-25-flash.csv  llama4-maverick.csv  qwen3-235.csv  qwen3-80.csv
3-Multi-Agent-System/notebooks/: 01_graph_smoke_test.ipynb  02_multi_agent_v1.ipynb  03_eval_vekalat_mcq.ipynb  04_test_modular_graph.ipynb  05_test_option_verifier.ipynb  06_test_main_graph_with_tools.ipynb  06_test_main_graph_without_tools.ipynb  07_test_main_graph_with_tools.ipynb  08_eval_full_dataset_multi_agent_v2.ipynb  09_debug_main_graph_with_tools.ipynb
3-Multi-Agent-System/src/legal_multi_agent/: config.py
3-Multi-Agent-System/src/legal_multi_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+2551 files in other folders)
