[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-multi-agent"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "qdrant-client>=1.7.0",
  "cohere>=5.0.0",
  "langgraph",
  "langsmith",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
